# indian-swing-trading-dashboard

./: .gitignore  .gitworkflow.md  DEPLOYMENT.md  GIT_SETUP.md  PERSISTENT_DATABASE_SETUP.md  README.md  app.py  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
src/engine/: __init__.py  analyst.py  assistant.py  calibration.py  cognition.py  quant_math.py  risk.py  strategies.py  strategy_base.py  strategy_registry.py
src/engine/strategy_modules/: __init__.py  coil_breakout.py  darvas_box.py  golden_pocket.py  institutional_wave.py  macd_zero_turn.py  weekly_climber.py
src/feed/: __init__.py  data.py  enrichment.py
src/models/: __init__.py  schemas.py
