[project]
name = "indian-swing-trading"
version = "1.0.0"
description = "High-Performance Swing Trading System for Nifty 500"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "yfinance>=0.2.28",
    "pandas-ta>=0.3.14b",
    "scipy>=1.11.0",
    "pydantic>=2.0.0",
    "plotly>=5.17.0",
    "streamlit>=1.28.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

